--- a/client/src/index.css
+++ b/client/src/index.css
@@ -53,3 +53,7 @@ body {
 .ubuntu {
   font-family: 'Ubuntu Mono', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+ul {
+  list-style: none;
+}
