Rename: markmap component and stylesheets

--- a/client/src/styles/Markmap.css
+++ b/client/src/styles/Markmap.css
@@ -1,6 +1,10 @@
 .mkm-main {
   margin: 15px auto 0;
-  width: 95%;
+  width: 98%;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 250px);
+  gap: 10px;
+  justify-content: center;
 }
 
 .mkm-main .mkm-sec {
