--- a/client/src/index.css
+++ b/client/src/index.css
@@ -57,3 +57,8 @@ body {
 ul {
   list-style: none;
 }
+
+.swal2-container {
+  font-family: 'Maven Pro', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 700;
+}
