--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -40,7 +40,8 @@
   transform: scaleX(1);
 }
 
-.navbar-main .menu .btn-tab {
+.navbar-main .menu .btn-tab,
+.navbar-main .menu .btn-logout {
   border: none;
   outline: none;
   background-color: var(--bg);
@@ -54,7 +55,17 @@
   font-weight: 500;
 }
 
-.navbar-main .menu .btn-tab::before {
+.navbar-main .menu .btn-logout {
+  font-size: 18px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 22px;
+  padding: 5px;
+}
+
+.navbar-main .menu .btn-tab::before,
+.navbar-main .menu .btn-logout::before {
   content: '';
   width: 100%;
   height: 100%;
@@ -69,7 +80,8 @@
   transition: all ease-in-out 250ms;
 }
 
-.navbar-main .menu .btn-tab:hover::before {
+.navbar-main .menu .btn-tab:hover::before,
+.navbar-main .menu .btn-logout:hover::before {
   transform: scaleX(1);
   transform-origin: left;
   color: var(--text);
