--- a/client/src/styles/Filter.css
+++ b/client/src/styles/Filter.css
@@ -24,12 +24,17 @@
   border-radius: 12px;
   color: var(--text);
   display: flex;
-  flex-direction: column;
   align-items: center;
   gap: 10px;
   font-size: 20px;
   transition: transform 700ms ease;
   height: fit-content;
+}
+
+#filter-main .filter-data label {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #filter-main .filter-data.show {
@@ -76,4 +81,5 @@
   border: none;
   cursor: pointer;
   outline: none;
+  width: 12ch;
 }
