--- a/client/src/styles/Filter.css
+++ b/client/src/styles/Filter.css
@@ -27,7 +27,7 @@
   align-items: center;
   gap: 10px;
   font-size: 20px;
-  transition: transform 700ms ease;
+  transition: transform 700ms ease-in-out;
   height: fit-content;
 }
 
