Change: highlight styles and codemirro width

--- a/client/src/styles/Editor.css
+++ b/client/src/styles/Editor.css
@@ -39,6 +39,10 @@
   transition: all 150ms ease;
 }
 
+.markmap-foreign mark {
+  background: var(--block-bg) !important;
+}
+
 .util-editor {
   position: absolute;
   display: flex;
