--- a/client/src/styles/EditorHelp.css
+++ b/client/src/styles/EditorHelp.css
@@ -1,6 +1,7 @@
 .editor-help {
   width: 80%;
   margin: auto;
+  height: 100%;
 }
 
 .editor-help .title {
@@ -13,8 +14,8 @@
 .editor-help .links {
   color: var(--text);
   font-family: 'Maven Pro', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   gap: 5px;
   margin-bottom: 20px;
 }
@@ -63,18 +64,30 @@
   color: var(--border-bg);
 }
 
-.example {
+.editor-help section {
+  height: 90%;
+}
+
+.editor-help .code {
   display: flex;
 }
 
-.example svg {
-  border: 2px solid;
+.editor-help .code > svg {
+  max-height: 450px;
+  border: 2px solid var(--border-bg);
+  border-left: none;
 }
 
-.example svg * {
-  color: var(--text);
+.mkm-render pre code {
+  all: unset;
+  display: block;
+  color: inherit !important;
 }
 
-.example .cm-content {
-  border: none;
+.hljs {
+  background-color: #353738 !important;
+}
+
+.hljs .hljs-string {
+  color: #9ece6a;
 }
