Update, Fix and Change: general client

--- a/client/src/styles/Editor.css
+++ b/client/src/styles/Editor.css
@@ -21,6 +21,10 @@
   font-family: 'Ubuntu Mono';
 }
 
+.mkm-render *#text {
+  width: 20ch;
+}
+
 .mkm-toolbar .mm-toolbar {
   position: absolute;
   background-color: var(--bg);
