Add: favorites tab

--- a/client/src/styles/Editor.css
+++ b/client/src/styles/Editor.css
@@ -119,3 +119,7 @@
 .mord {
   font-family: 'KaTeX_Main', 'Times New Roman', Times, serif;
 }
+
+.mop {
+  font-family: 'KaTeX_Main', 'Times New Roman', Times, serif;
+}
