--- a/client/src/styles/Markmap.css
+++ b/client/src/styles/Markmap.css
@@ -1,10 +1,10 @@
 .mkm-main {
-  margin: 15px auto 0;
-  width: 98%;
+  margin: 25px auto 0;
+  width: 99%;
   display: grid;
   grid-template-columns: repeat(auto-fill, 250px);
   gap: 10px;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
 .mkm-main .mkm-sec {
